--- a/work_1.html
+++ b/work_1.html
@@ -190,7 +190,7 @@
 							<div class="col-md-9">
 								
 								<blockquote class="fh5co-testimony">
-									<p class="fh5co-quote">&ldquo;El programa trabaja sin errores, es intuitivo y de uso muy accesible&rdquo;</p>
+									<p class="fh5co-quote">&ldquo;El programa me parece muy acertado y muy funcional para su uso en hospital, porque es muy fácil de comprender y utilizar tanto para pacientes como profesionales de la salud. &rdquo;</p>
 									<p><cite>&mdash;Anónimo</cite></p>
 								</blockquote>
 							</div>
