--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					<div class="fh5co-text col-md-4 animate-box">
 						<h2>Base de datos para hospital</h2>
 						<p>Proyecto realizado en Base de Datos 2 con la finalidad de administrar los usuarios de la base de datos. Cuenta con opción para enviar correo, revisar calendario, el historial clínico y reportes. </p>
-						<p><a href="work_1.html" class="btn btn-light btn-outline transition">Ver projecto</a></p>
+						<p><a href="work_1.html" class="btn btn-light btn-outline transition">Ver proyecto</a></p>
 					</div>
 				</div>
 
